--- a/css/master.css
+++ b/css/master.css
@@ -162,7 +162,7 @@ h1 {
 /* Header Image and Slogan */
 
 .header-image {
-  height: 550px;
+  height: 580px;
   background: url("../images/header/dafen-trade-park-front-before.jpg") no-repeat;
   background-size: cover;
 }
@@ -183,8 +183,7 @@ h1 {
 /* Text */
 
 .text-container {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 80px;
   padding-left: 30px;
   padding-right: 30px;
 }
@@ -211,6 +210,9 @@ h1 {
 .bullet-container {
   width: 100%;
   display: table;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  cursor: default;
 }
 
 .bullet-container span {
@@ -257,13 +259,9 @@ h1 {
   display: table;
 }
 
-.dual-pane-container:first-of-type {
-  margin-top: 90px;
-}
-
 .dual-pane-container div {
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: text-top;
 }
 
 .dual-pane-container h2 {
@@ -275,8 +273,9 @@ h1 {
 }
 
 .dual-pane-container .dual-pane-image {
+  margin-top: 80px;
   display: block;
-  height: 100%;
+  height: 440px;
   width: 100%;
   background-size: cover !important;
   background-position: center;
@@ -287,20 +286,20 @@ h1 {
 
 .gallery-preview-container {
   display: block !important;
-  width: 90%;
-  height: 250px;
+  width: 100%;
+  height: auto;
   margin: 0 auto;
 }
 
 .gallery-preview-container .image {
   display: block !important;
   width: 90%;
-  height: 250px;
+  height: 240px;
+  margin-top: 80px;
   background: rgba(0, 0, 0, 0.9);
   background-size: cover !important;
   background-position: center;
   background-repeat: no-repeat;
-  border-radius: 2px;
   text-align: center;
 }
 
@@ -315,7 +314,7 @@ h1 {
   font-size: 22px;
   font-weight: 600;
   color: rgb(255, 255, 255);
-  letter-spacing: 1.8px;
+  letter-spacing: 6.0px;
 }
 
 .float-left {
