--- a/css/master.css
+++ b/css/master.css
@@ -23,6 +23,19 @@ h1 {
   letter-spacing: 2.0px;
 }
 
+a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+
+a.link {
+  padding-bottom: 4px;
+  border-bottom: 2px solid;
+  color: rgba(0, 0, 0, 1);
+  letter-spacing: 0.4px;
+  font-weight: 400;
+}
+
 /* Site Navigation */
 
 .logo {
@@ -162,22 +175,43 @@ h1 {
 /* Header Image and Slogan */
 
 .header-image {
-  height: 580px;
-  background: url("../images/header/dafen-trade-park-front-before.jpg") no-repeat;
-  background-size: cover;
+  height: 560px;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  background-position: center !important;
 }
 
 .header-image .container {
-  padding-top: 200px;
+  max-width: 1000px;
+  padding-top: 450px;
   text-align: center;
+  margin: auto;
 }
 
 .header-image h1 {
+  display: inline-block;
   font-family: 'Montserrat', sans-serif;
-  font-size: 36px;
+  font-size:13px;
+  letter-spacing: 2.0px;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.8);
+  background: rgba(255, 255, 255, 0.96);
+  padding: 20px;
+  cursor: default;
+}
+
+.button--start-yours {
+  display: inline-block;
+  font-family: 'Montserrat', sans-serif;
+  font-size:13px;
+  letter-spacing: 2.0px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 1);
+  background: rgba(0, 0, 0, 0.96);
+  padding: 20px;
+  margin-left: 5px;
+  margin-right: 5px;
   text-transform: uppercase;
-  letter-spacing: 4.0px;
-  color: rgb(255, 255, 255);
 }
 
 /* Text */
@@ -226,6 +260,10 @@ h1 {
   margin: 4px;
 }
 
+.bullet-container span:first-of-type {
+  border: none;
+}
+
 .bullet-container h3 {
   font-family: 'Montserrat', sans-serif;
   font-size: 28px;
@@ -235,6 +273,7 @@ h1 {
 .bullet-container h4 {
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
+  letter-spacing: 0.4px;
   margin: 0;
   margin-top: 2px;
 }
@@ -246,10 +285,6 @@ h1 {
   margin-top: 6px;
   line-height: normal;
   font-style: italic;
-}
-
-.bullet-container span:first-of-type {
-  border: none;
 }
 
 /* Dual Pane View */
@@ -272,6 +307,14 @@ h1 {
   text-transform: uppercase;
 }
 
+.dual-pane-container h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  letter-spacing: 1.0px;
+  text-transform: uppercase;
+  margin-top: 30px;
+}
+
 .dual-pane-container .dual-pane-image {
   margin-top: 80px;
   display: block;
@@ -286,7 +329,7 @@ h1 {
 
 .gallery-preview-container {
   display: block !important;
-  width: 100%;
+  width: 95%;
   height: auto;
   margin: 0 auto;
 }
@@ -294,13 +337,14 @@ h1 {
 .gallery-preview-container .image {
   display: block !important;
   width: 90%;
-  height: 240px;
+  height: 260px;
   margin-top: 80px;
   background: rgba(0, 0, 0, 0.9);
   background-size: cover !important;
   background-position: center;
   background-repeat: no-repeat;
   text-align: center;
+  overflow: hidden;
 }
 
 .gallery-preview-container a {
@@ -310,11 +354,10 @@ h1 {
   padding-top: 120px;
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
-  text-transform: uppercase;
-  font-size: 22px;
-  font-weight: 600;
+  font-size: 28px;
+  font-weight: 400;
   color: rgb(255, 255, 255);
-  letter-spacing: 6.0px;
+  letter-spacing: 0.4px;
 }
 
 .float-left {
@@ -324,8 +367,98 @@ h1 {
 .float-right {
   float: right;
 }
+
+/* Meet the team */
+
+.image-grid-container {
+  display: table;
+  width: 90%;
+}
+
+.margin-top-100 {
+  margin-top: 100px;
+}
+
+.image-grid-container div {
+  display: table-cell;
+  overflow: hidden;
+}
+
+.image-grid-container .image {
+  display: block;
+  height: 200px;
+  width: auto;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  transition: 0.2s all;
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
+.image-grid-container span {
+  display: block;
+  position: relative;
+  background: rgba(255, 255, 255, 1);
+  transition: 0.2s all;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  cursor: default;
+  margin-left: 16px;
+}
+
+.image-grid-container h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.2px;
+  margin: 0;
+  padding: 0;
+}
+
+.image-grid-container figcaption {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 8px;
+  font-weight: 400;
+  letter-spacing: 0.6px;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+}
+
+/* Contact Section */
+
+.contact-text {
+  padding-top: 20px;
+}
+
 /* Site Footer */
 
 .site-footer {
+  margin-top: 80px;
+  background: rgba(0, 0, 0, 0.9);
+  color: rgba(255, 255, 255, 1);
+}
 
+.site-footer span {
+  border: none;
+  text-align: center;
+}
+
+.site-footer a {
+  color: rgba(255, 255, 255, 1);
+}
+
+.footer-text {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 20px;
+  font-family: 'Lato', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.2);
+}
+
+.footer-text a {
+  color: rgba(255, 255, 255, 0.2);
 }
