--- a/css/master.css
+++ b/css/master.css
@@ -327,37 +327,67 @@ a.link {
 
 /* Gallery Previews */
 
-.gallery-preview-container {
+.gallery-container {
   display: block !important;
   width: 95%;
   height: auto;
   margin: 0 auto;
 }
 
-.gallery-preview-container .image {
+.gallery-container .image {
   display: block !important;
   width: 90%;
-  height: 260px;
+  height: 280px;
   margin-top: 80px;
   background: rgba(0, 0, 0, 0.9);
   background-size: cover !important;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
   text-align: center;
   overflow: hidden;
 }
 
-.gallery-preview-container a {
-  display: block;
+.gallery-container .hidden {
+  display: none !important;
+}
+
+.gallery-container .controls {
+  display: table;
   width: 100%;
   height: 100%;
-  padding-top: 120px;
-  text-decoration: none;
+}
+
+.gallery-container .controls .left {
+  display: table-cell;
+  height: 100%;
+  cursor: e-resize;
+  z-index: 99;
+}
+
+.gallery-container .controls .right {
+  display: table-cell;
+  height: 100%;
+  cursor: w-resize;
+  z-index: 99;
+}
+
+.gallery-container .controls .count {
+  letter-spacing: 1.0px;
+  display: block;
+  height: 100%;
+  color: rgba(255, 255, 255, 1);
+  padding-right: 15px;
+  padding-top: 10px;
+  cursor: e-resize;
   font-family: 'Montserrat', sans-serif;
-  font-size: 28px;
-  font-weight: 400;
-  color: rgb(255, 255, 255);
-  letter-spacing: 0.4px;
+}
+
+.gallery-container .no-selection {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -ms-user-select: none;
 }
 
 .float-left {
