--- a/css/master.css
+++ b/css/master.css
@@ -481,7 +481,7 @@ a.link {
   display: table-cell;
   vertical-align: bottom;
   height: 100%;
-  cursor: e-resize;
+  cursor: pointer;
   z-index: 99;
   text-align: right;
 }
@@ -490,7 +490,7 @@ a.link {
   display: table-cell;
   vertical-align: bottom;
   height: 100%;
-  cursor: w-resize;
+  cursor: pointer;
   z-index: 99;
   text-align: left;
   padding-left: 56px;
