--- a/css/master.css
+++ b/css/master.css
@@ -503,7 +503,7 @@ a.link {
   color: rgba(255, 255, 255, 1);
   padding-right: 15px;
   padding-top: 10px;
-  cursor: e-resize;
+  cursor: pointer;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   font-size: 16px !important;
